--- a/app/views/schedules/show.ejs
+++ b/app/views/schedules/show.ejs
@@ -19,7 +19,15 @@
     <div class="container">
      <div class="row">
       <div class="span3" id="sidenav">
-       YASODFASDF
+       <div class="searchbar">
+        <form class="navbar-form pull-left">
+            <input type="text" id="searchform"class="span2" style="margin-top:0">
+            <button type="submit" id="searchbtn" class="btn" style="margin-top:0" onclick="return doQuery('professor:ord')">Submit</button>
+        </form>
+        <div class="results">
+
+        </div>
+       </div>
      </div>
      <div class="span9" id="tables" >
      </div>
